# rs_v4r

./: CMakeLists.txt  README.md  package.xml
cmake/: rs_v4r_config.cmake
descriptors/analysis_engines/: v4r_pipeline.yaml
descriptors/annotators/: v4rRecognitionAnnotator.yaml
descriptors/typesystem/: all_types.xml
include/rs_v4r/: suturo_conversion.h  v4rProcessManager.h
include/rs_v4r/types/: all_types.h  type_definitions.h
src/: suturo_conversion.cpp  v4rProcessManager.cpp  v4rRecognitionAnnotator.cpp
