<?xml version="1.0"?>
<package format="2">
  <name>rs_v4r</name>
  <version>0.0.0</version>
  <description>The rs_v4r package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hassouna@uni-bremen.de">Vanessa Hassouna</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robosherlock</build_depend>
  <exec_depend>robosherlock</exec_depend>
  <build_depend>suturo_perception_msgs</build_depend>
  <exec_depend>suturo_perception_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>